[package]
name = "d2-mapserver-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
raqote = "0.8.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
colored = "2"