[package]
name = "d2-mapgenerator"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
# raqote = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
colored = "2"
rayon = "1.5"
euclid = "0.22"
tiny-skia = "0.7"
actix-web = "4"