[package]
name = "d2-mapgenerator"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1


[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
colored = "2"
rayon = "1.5"
euclid = "0.22"
tiny-skia = "0.7"
actix-web = "4"
pathfinding = "3.0.13"